<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".activities.CreateStudentActivity">

    <ImageView
        android:id="@+id/personIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_person_pin_24"/>

    <EditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/phoneEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/addressEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/submitBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/submitBtn"/>


</LinearLayout>