<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="120dp"
          android:background="@color/grey"
          app:cardCornerRadius="12dp">


          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="30dp"
              android:layout_marginTop="3dp"
              android:orientation="vertical">

              <TextView
                  android:id="@+id/idTv"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:textSize="12dp"
                  android:textStyle="bold"
                  android:layout_marginTop="10dp"
                  android:text="@string/idTv"/>
              <TextView
                  android:id="@+id/nameTv"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:textSize="12dp"
                  android:textStyle="bold"
                  android:layout_marginTop="5dp"
                  android:text="@string/nameTv"/>

              <TextView
                  android:id="@+id/emailTv"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:textSize="12dp"
                  android:text="@string/emailTv"/>

              <TextView
                  android:id="@+id/phoneTv"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:textSize="12dp"
                  android:text="@string/phoneTv"/>

              <TextView
                  android:id="@+id/addressTv"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:textSize="12dp"
                  android:text="@string/addressTv"/>


          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="220dp"
              android:layout_marginTop="15dp"
              android:orientation="vertical">

              <Button
                  android:id="@+id/detailBtn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/detail"/>

              <Button
                  android:id="@+id/deleteBtn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/delete"/>

          </LinearLayout>

      </androidx.cardview.widget.CardView>

  </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/deleteStudentPb"/>


</RelativeLayout>