<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".ui.login.LoginActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:orientation="vertical">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/contact"/>

       <EditText
           android:id="@+id/emailEdt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="20dp"
           android:hint="@string/email"/>

       <EditText
           android:id="@+id/passwordEdt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="20dp"
           android:hint="@string/password"/>

       <Button
           android:id="@+id/loginBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:text="@string/login"/>

       <View
           android:layout_width="match_parent"
           android:layout_height="2dp"
           android:layout_marginTop="20dp"
           android:background="@color/black"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:textSize="20dp"
               android:text="@string/account"/>

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/signUpBtn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:text="@string/signUp"/>

       </LinearLayout>
   </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/progressBar"/>

</RelativeLayout>